fixed: navbar-brand width to avoid early collapse fixed: navbar URL pointing to / instead of index.html

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -24,10 +24,9 @@ h2 {
 
 .navbar-brand {
   padding: 5px 0;
+  width: 70px;
 
   svg {
-    height: $navbar-height - 12px; // - padding (10) - random 2px to avoid early collapse of navbar
-
     .mvw-logo {
       fill: $logo-fill-color;
     }
